<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LaLaDui</string>
    <string name="zixun">资讯</string>
    <string name="chaxun">查询</string>
    <string name="youxi">游戏</string>
    <string name="shipin">视频</string>
    <string name="wode">我的</string>

    <string-array name="menu_zh">
        <item>5积分 视频</item>
        <item>10积分 视频</item>
        <item>15积分 视频</item>
        <item>20积分 视频</item>
        <item>25积分 视频</item>
    </string-array>
    <string-array name="menu_en">
        <item>Five Credit</item>
        <item>Ten Credit</item>
        <item>Fifteen Credit</item>
        <item>Twenty Credit</item>
        <item>Twenty-five Credit</item>
    </string-array>
</resources>
