<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#fff">
    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
    </FrameLayout>
    <View
        android:id="@+id/nihao"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#fff"/>

    <RadioGroup
        android:id="@+id/radioGrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#3A3636"
        >


        <RadioButton
            android:id="@+id/zixun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0EDED"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_zixun"
            android:gravity="center"
            android:text="@string/zixun"
            android:textColor="@drawable/color_selector"
            android:textSize="@dimen/text_size_12"
            android:checked="true"
        />
        <RadioButton
            android:id="@+id/chaxun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0EDED"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_chaxun"
            android:gravity="center"
            android:text="@string/chaxun"
            android:textColor="@drawable/color_selector"
            android:textSize="@dimen/text_size_12"
            />
        <RadioButton
            android:id="@+id/youxi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F0EDED"
            android:button="@null"
            android:clipChildren="false"
            android:gravity="center|bottom"
            android:text="@string/youxi"
            android:textColor="@drawable/color_selector"
            android:textSize="@dimen/text_size_12"
            />

        <RadioButton
            android:id="@+id/shipin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0EDED"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_shipin"
            android:gravity="center"
            android:text="@string/shipin"
            android:textColor="@drawable/color_selector"
            android:textSize="@dimen/text_size_12"
            />
        <RadioButton
            android:id="@+id/wode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0EDED"
            android:button="@null"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/selector_shipin"
            android:gravity="center"
            android:text="@string/wode"
            android:textColor="@drawable/color_selector"
            android:textSize="@dimen/text_size_12"
            />
    </RadioGroup>
    <ImageView
        android:id="@+id/yuan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:src="@drawable/yuan" />
    </RelativeLayout>
</LinearLayout>